Revision history for Perl extension Math::Prime::Util::GMP

0.04  30 October 2012
    - Add simple prime_count function.  It uses next_prime so is terribly slow
      for big ranges.  It's a lot faster than the PP code when given a large
      base and small range e.g. (10**96, 10**96 + 2**18).
    - Add primorial, pn_primorial, and consecutive_integer_lcm functions.
    - Add a perfect power test for factoring.

0.03  16 July 2012
    - XS callable: _lcm_of_consecutive_integers(B)
      which is a better alternative for B! for many factoring algorithms.
    - Fix some minor compile issues.

0.02  15 July 2012
    - Factoring tests assumed 64-bit.  Rewrite.

0.01  15 July 2012
    - Initial release